# dotconfig

./: .gitignore  .releaserc.json  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  release.yml  test-publish.yml  test.yml
src/dotconfig/: __init__.py  loader.py  transformer.py
src/dotyaml/: __init__.py
tests/: conftest.py  test_simple.py
tests/step_defs/: shared_steps.py  test_advanced_config.py  test_basic_loading.py  test_data_types.py  test_precedence.py
